Update title and footer text in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Ananas.pl — tekstowe forum</title>
+  <title>Ananas.pl</title>
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&family=Noto+Sans:wght@300;400;700&display=swap" rel="stylesheet">
   <script type="importmap">
@@ -17,7 +17,8 @@
 <body>
   <div id="app" class="app">
     <header class="topbar">
-      <div class="brand">Ananas.pl</div>
+      <div class="brand"><center><h1 style="font-size:30px;">Ananas.pl</h1></center>
+        >'''</div>
       <div id="thread-count" style="margin-left:12px;font-size:13px;color:var(--muted)"></div>
       <div class="top-actions">
         <button id="new-thread-btn" class="btn">Nowy temat</button>
@@ -88,7 +89,7 @@
       </div>
     </div>
 
-    <footer class="footer">Ananas.pl • Prosty tekstowy board — demo</footer>
+    <footer class="footer">Ananas.pl — demo</footer>
   </div>
 
   <script type="module" src="data.js"></script>
